# Neural-Codec

./: .gitignore  CLAUDE.md  CMakeLists.txt  pyproject.toml
codec/: __init__.py  attention.py  decoder.py  decoder_tc.py  encoder.py  encoder_aa.py  encoder_attn.py  encoder_multiattn.py  loss.py  model.py  model_attn.py  model_graph.txt  model_multiattn.py  model_v2.py  model_v2_graph.txt  quantizer.py
codec/tests/: __init__.py
contouring/: __init__.py  contour.py  marching_squares.py  pwcl_fit.py
contouring/tests/: __init__.py  test_contouring.py
csdf/: __init__.py  csdf_utils.py  rasterizer.cpp  rasterizer.cu  rasterizer.h
csdf/tests/: __init__.py  test_rasterizer.py
dataset/: __init__.py  catalog.csv  dataset.py  ingest.py  rasterize.py  verify_dataset.py
docs/specs/: codec.md  csdf.md  dataset.md  eval.md  io.md
eval/: __init__.py  evaluate.py  evaluate_bypass.py  evaluate_segment_distance.py  metrics.py  report.py
eval/results/: split_test_summary.md
eval/results/baseline_v1_val/: results.csv  summary.json
eval/results/split_D16_c16_B16/: results.csv  summary.json
eval/results/split_D16_c16_B8/: results.csv  summary.json
eval/results/split_D16_c32_B16/: results.csv  summary.json
eval/results/split_D16_c32_B8/: results.csv  summary.json
eval/results/split_D16_c8_B16/: results.csv  summary.json
eval/results/split_D16_c8_B8/: results.csv  summary.json
eval/results/split_D32_c16_B16/: results.csv  summary.json
eval/results/split_D32_c16_B8/: results.csv  summary.json
eval/results/split_D32_c32_B16/: results.csv  summary.json
eval/results/split_D32_c32_B8/: results.csv  summary.json
eval/results/split_D32_c8_B16/: results.csv  summary.json
eval/results/split_D32_c8_B8/: results.csv  summary.json
eval/results/split_D8_c16_B16/: results.csv  summary.json
eval/results/split_D8_c16_B8/: results.csv  summary.json
eval/results/split_D8_c32_B16/: results.csv  summary.json
eval/results/split_D8_c32_B8/: results.csv  summary.json
eval/results/split_D8_c8_B16/: results.csv  summary.json
eval/results/split_D8_c8_B8/: results.csv  summary.json
eval/results/v2_split_D16_c16_B8/: results.csv  summary.json
eval/tests/: __init__.py
io/: __init__.py  layout_io.py  pack.py  unpack.py
io/tests/: __init__.py
scripts/: attn_eval.sh  attn_noquant_eval.sh  attn_split_eval.sh  attn_split_test.sh  bypass_eval.sh  compress.py  decompress.py  multiattn_eval.sh  multiattn_train.sh  rasterize.sh  rasterize_oas.py  segment_distance_eval.sh  show_npy.py  sliding_split_eval.sh  sliding_split_test.sh  split_eval.sh  split_eval_v2.sh  split_test.sh  split_test_v2.sh  train.sh  validate_roundtrip.py  visualize_geometries.py  visualize_training.py
train/: __init__.py  train.py
train/config/: attn_noquant_v1.yaml  attn_v1.yaml  baseline.yaml  noquant_v1.yaml  rasterize.yaml
(+3919 files in other folders)
