[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_codec"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "klayout",
    "numpy",
    "pyyaml",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["csdf*", "codec*", "contouring*", "correction*", "io*", "dataset*", "eval*", "train*", "scripts*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
